k8s/core/test6/overlays/eks/indexer/tx-indexer-tls-ingress-eks.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: tx-indexer-ingress-tls
  namespace: gno
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`indexer.test6.gnoteam.com`) || Host(`indexer.test6.gno.land`)
    kind: Rule
    services:
    - name: tx-indexer
      namespace: gno
      port: tx-indexer-port
  tls:
    certResolver: gnoresolver
